--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,9 @@
             <div id="my-name"> <a href="./index.html"> Kathy Zhang</a>
             </div>
             <div id="my-links">
-                <a href="./projects.html"> projects</a> ★
-                <a href="./contact.html"> contact</a> ★
-                
-                <a href="http://www.github.com" class="fab fa-github"></a> ★
+                <a class="btn pink-button" role="button" href="./projects.html"> projects</a>
+                <a class="btn pink-button" role="button" href="./contact.html"> contact</a> ★
+                <a href="http://www.github.com" class="fab fa-github"></a> 
                 <a href="http://www.linkedin.com" class="fab fa-linkedin"></a>
             </div>
     </div>
