--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,31 @@
     <div id="header-container">
         <div id="top-accent"></div>
         <nav id="my-navbar">
-            <div id="my-name"> <a href="./index.html"> Kathy Zhang</a>
+            <div id="my-name"> 
+                <a href="./index.html"> Kathy Zhang</a>
             </div>
+
             <div id="my-links">
                 <a class="btn pink-button" role="button" href="./projects.html"> projects</a>
                 <a class="btn pink-button" role="button" href="./contact.html"> contact</a> ★
                 <a href="http://www.github.com" class="fab fa-github"></a> 
                 <a href="http://www.linkedin.com" class="fab fa-linkedin"></a>
             </div>
-    </div>
-    </nav>
+
+            <!-- Mobile Dropdown -->
+            <div id="mobile-links">
+
+                    <div class="dropdown">
+                            <button class="btn dropbtn"><i class="fas fa-caret-down"></i></button>
+                            <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                            </div>
+                          </div>
+
+            </div>
+        </nav>
     </div>
 </body>
 
