completed mobile nav

--- a/contact.html
+++ b/contact.html
@@ -34,16 +34,15 @@
 
             <!-- Mobile Dropdown -->
             <div id="mobile-links">
-
-                    <div class="dropdown">
-                            <button class="btn dropbtn"><i class="fas fa-caret-down"></i></button>
-                            <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                            </div>
-                          </div>
-
+                <div class="dropdown">
+                <button class="btn dropbtn"><i class="fas fa-caret-down"></i></button>
+                    <div class="dropdown-content">
+                        <a href="./projects.html"> projects</a>
+                        <a href="./contact.html"> contact</a> 
+                        <a href="http://www.github.com"> github </a> 
+                        <a href="http://www.linkedin.com"> linkedin</a>
+                    </div>
+                </div>
             </div>
         </nav>
     </div>
