added semantic tag

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div id="header-container">
+    <nav id="header-container">
         <div id="top-accent"></div>
         <nav id="my-navbar">
             <div id="my-name"> 
@@ -40,7 +40,7 @@
                         <a href="./projects.html"> projects</a>
                         <a href="./contact.html"> contact</a> 
                         <a href="http://www.github.com"> github </a> 
-                        <a href="http://www.linkedin.com"> linkedin</a>
+                        <a href="http://www.linkedin.com"> linked-in</a>
                     </div>
                 </div>
             </div>
