--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <div id="header-container">
+    <!-- Header & Nav -->
+    <nav id="header-container">
         <div id="top-accent"></div>
         <nav id="my-navbar">
             <div id="my-name"> 
@@ -40,12 +41,18 @@
                         <a href="./projects.html"> projects</a>
                         <a href="./contact.html"> contact</a> 
                         <a href="http://www.github.com"> github </a> 
-                        <a href="http://www.linkedin.com"> linkedin</a>
+                        <a href="http://www.linkedin.com"> linked-in</a>
                     </div>
                 </div>
             </div>
         </nav>
+
+    <!-- Main Content -->
+
+
     </div>
+
+
 </body>
 
 </html>
