adding filler text and formatting

--- a/index.html
+++ b/index.html
@@ -47,11 +47,21 @@
             </div>
         </nav>
 
-    
-
-
     </nav>
 
+    <container id="main-container">
+        <div class="content-box" id="bio-box">
+            <div id="pic-holder"> <img id="my-pic"src= "assets/images/portfolio-pic.jpg"></div>
+            <div id="bio-text">I am front-end developer with a background in the hospitality industry.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Est dolorem, saepe vel et sit deleniti aperiam deserunt explicabo minus odio, 
+                 officia recusandae quo cupiditate atque eum tenetur. Fuga, reiciendis quisquam? 
+                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam assumenda qui nulla, 
+                 vitae dolore accusamus tempore harum obcaecati sunt suscipit repudiandae, 
+                 ea modi a sint, temporibus commodi et aspernatur hic. 
+            </div>
+            
+        </div>
+    </container>
 
 </body>
 
