--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
     <container id="main-container">
         <div class="content-box" id="bio-box">
             <div id="pic-holder"> <img id="my-pic"src= "assets/images/portfolio-pic.jpg"></div>
-            <div id="bio-text">I am front-end developer with a background in the hospitality industry.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 Est dolorem, saepe vel et sit deleniti aperiam deserunt explicabo minus odio, 
-                 officia recusandae quo cupiditate atque eum tenetur. Fuga, reiciendis quisquam? 
-                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam assumenda qui nulla, 
-                 vitae dolore accusamus tempore harum obcaecati sunt suscipit repudiandae, 
-                 ea modi a sint, temporibus commodi et aspernatur hic. 
-            </div>
+            <!-- <div id="text-holder"></div> -->
+            <p id="bio-text">
+                 I am front-end developer with a background in the hospitality industry. My experience in restaurants and hotels
+                 working to maximize customer experience drives my passion to create web-applications that are user-focused.
+                 My goal is to make simplified web-apps that are easy to use without sacrificing functionality or design asethetics. 
+            </p>
             
         </div>
     </container>
