started proj page

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
                 <button class="btn dropbtn"><i class="fas fa-caret-down"></i></button>
                     <div class="dropdown-content">
                         <a href="./projects.html"> projects</a>
+                        <a id="view-resume" href="#"> resume </a> 
                         <a href="./contact.html"> contact</a> 
                         <a href="http://www.github.com"> github </a> 
                         <a href="http://www.linkedin.com"> linked-in</a>
@@ -46,6 +47,7 @@
             </div>
         </nav>
     </nav>
+    <div id="footer"></div>
 </body>
 
 </html>
