--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
                 <button class="btn dropbtn"><i class="fas fa-caret-down"></i></button>
                     <div class="dropdown-content">
                         <a href="./projects.html"> projects</a>
+                        <a id="view-resume" href="#"> resume </a> 
                         <a href="./contact.html"> contact</a> 
                         <a href="http://www.github.com"> github </a> 
                         <a href="http://www.linkedin.com"> linked-in</a>
+
                     </div>
                 </div>
             </div>
@@ -65,6 +67,7 @@
 
     </container>
     
+    <div id="footer"></div>
 </body>
 
 </html>
