--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,17 @@
         </nav>
     </nav>
     <div id="footer"></div>
+
+    <div class="card" style="width: 30rem;">
+        <div class="card-header">
+          Intergalatic Word Guess
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Hang-man style game with an outerspace theme! Use the keyboard to enter your guesses.</li>
+          <li class="list-group-item">Features HTML, CSS, Bootstrap and Javascript</li>
+          <li class="list-group-item">View on GitHub</li>
+        </ul>
+      </div>
 </body>
 
 </html>
