--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     </container>
     
-    <div id="footer"></div>
+    <div id="footer"> Copyright © 2019 - Kathy Zhang</div>
 </body>
 
 </html>
