--- a/projects.html
+++ b/projects.html
@@ -50,12 +50,12 @@
 
     <container id="main-container">
         
-        <div class="card-box">
+        <div class="content-box" id="card-box">
             <div class="thumb-holder">
                 <img class="project-thumb" src= "assets/images/wordguess.PNG" alt="thumbnail">
             </div>
 
-            <div class="project-card card" style="width: 30rem;">
+            <!-- <div class="project-card card" style="width: 30rem;">
                 <div class="project-title card-header">
                   Intergalatic Word Guess
                 </div>
@@ -64,11 +64,11 @@
                   <li class="list-group-item">Features HTML, CSS, Bootstrap and Javascript</li>
                   <li class="list-group-item git-line"> <a class="btn pink-button git-link" role="button" href="http://www.git-hub.com"> view on github</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
 
 
-        <div class="card-box" >
+        <div class="content-box" id="card-box" >
             <div class="thumb-holder">
                 <img class="project-thumb" src= "assets/images/disneygif.PNG" alt="thumbnail">
             </div>
