--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-
+      
         <div class="content-box" id="card-box" >
             <div class="thumb-holder">
                 <img class="project-thumb" src= "assets/images/disneygif.PNG" alt="thumbnail">
@@ -132,7 +132,7 @@
                   Webster-Halsted POS System
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">All-in-one POS system that combines a consumer and business use. Customers can make reservations online and restaurant staff can manage reservations, seating and orders.
+                  <li class="list-group-item">All-in-one POS system that combines a consumer and business use. Customers can make reservations online and restaurant staff can manage reservations, seating and orders. Login with admin@shine.com/password
                 </li>
                   <li class="list-group-item"> React, webscraping, Express.js, and mongoDB</li>
                   <li class="list-group-item git-line"> <a class="btn git-link" role="button" href="http://www.github.com" alt="link to app"> view </a></li>
