--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div id="my-links">
                 <a class="btn pink-button" role="button" href="./projects.html"> projects</a>
                 <a class="btn pink-button" role="button" href="./contact.html"> contact</a> ★
-                <a href="http://www.github.com" class="fab fa-github"></a> 
-                <a href="http://www.linkedin.com" class="fab fa-linkedin"></a>
+                <a href="http://www.github.com/kat-zhang" target="_blank" class="fab fa-github"></a> 
+                <a href="https://www.linkedin.com/in/kathy-zhang-6b5367164/" target="_blank"  class="fab fa-linkedin"></a>
             </div>
 
             <!-- Mobile Dropdown -->
@@ -39,10 +39,10 @@
                 <button class="btn dropbtn"><i class="fas fa-caret-down"></i></button>
                     <div class="dropdown-content">
                         <a href="./projects.html"> projects</a>
-                        <a id="view-resume" href="#"> resume </a> 
+                        <!-- <a id="view-resume" href="#"> resume </a>  -->
                         <a href="./contact.html"> contact</a> 
-                        <a href="http://www.github.com"> github </a> 
-                        <a href="http://www.linkedin.com"> linked-in</a>
+                        <a href="http://www.github.com/kat-zhang" target="_blank" > github </a> 
+                        <a href="https://www.linkedin.com/in/kathy-zhang-6b5367164/" target="_blank" > linked-in</a>
 
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                  
             </p>
         </div>
-        <div id="trigger-container"><button class= "btn pink-button" id="resume-trigger"> view resume</button></div>
+        <!-- <div id="trigger-container"><button class= "btn pink-button" id="resume-trigger"> view resume</button></div> -->
         
 
     </container>
