--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">Hang-man style game with an outerspace theme! Use the keyboard to enter your guesses.</li>
-                  <li class="list-group-item">HTML, CSS, Bootstrap and Javascript</li>
+                  <li class="list-group-item">Features HTML, CSS, Bootstrap and Javascript</li>
                   <li class="list-group-item git-line"> <a class="btn git-link" role="button" href="https://github.com/kat-zhang/Intergalatic-Word-Guess/blob/master/README.md" target="_blank"> View on Github</a></li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">Choose from the movie menu or use the search bar. Click on the images to animate</li>
-                  <li class="list-group-item">jQuery, Giphy API and AJAX calls</li>
+                  <li class="list-group-item">Features jQuery, Giphy API and AJAX calls</li>
                   <li class="list-group-item git-line"> <a class="btn git-link" role="button" href="https://github.com/kat-zhang/GIFtastic" target="_blank" alt="link to app"> View on Github </a></li>
                 </ul>
             </div>
@@ -97,7 +97,7 @@
                     </div>
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item">A command-line application using node.js to execute server-side JavaScript.LIRI-bot is used to find information on films, songs and concert dates through the terminal. </li>
-                      <li class="list-group-item">node.js, Spotify API</li>
+                      <li class="list-group-item"> Features node.js, Spotify API</li>
                       <li class="list-group-item git-line"> <a class="btn git-link" role="button" href="https://github.com/kat-zhang/LIRI-bot" target="_blank" alt="link to app"> View on Github </a></li>
                     </ul>
                 </div>
@@ -115,7 +115,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">Crossword, weather and horoscope app inspired by newspapers. Features fully interactive puzzles dating back to 1970. Weather and horoscopes updated daily.</li>
-                  <li class="list-group-item"> Materialize, NYT API, DarkSky API, session storage</li>
+                  <li class="list-group-item"> Features Materialize, NYT API, DarkSky API, session storage</li>
                   <li class="list-group-item git-line"> <a class="btn git-link" role="button" href="https://github.com/kat-zhang/CrossNews" target="_blank" alt="link to app"> View on Github </a></li>
                 </ul>
             </div>
@@ -135,7 +135,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">Interactive display of cime in city of the past 5 years. Users can enter an address to view a map and crimes in the area. </li>
-                  <li class="list-group-item"> amCharts, mySQL, Google Maps API, data from the City of Chicago</li>
+                  <li class="list-group-item"> Features amCharts, mySQL, Google Maps API, data from the City of Chicago</li>
                   <li class="list-group-item git-line"> <a class="btn git-link" role="button" href="https://github.com/kat-zhang/Project-2.1" target="_blank" alt="link to app"> View on Github </a></li>
                 </ul>
             </div>
@@ -153,7 +153,7 @@
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">All-in-one POS system that combines a consumer and business use. Customers can make reservations online and restaurant staff can manage reservations, seating and orders. Login with admin@shine.com/password
                 </li>
-                  <li class="list-group-item"> React, webscraping, Express.js, and mongoDB</li>
+                  <li class="list-group-item"> Features React, webscraping, Express.js, and mongoDB</li>
                   <li class="list-group-item git-line"> <a class="btn git-link" role="button" href="https://github.com/kat-zhang/POS-System/blob/master/README.md" target="_blank" alt="link to app"> View on Github </a></li>
                 </ul>
             </div>
